--- a/empty_min.cfg
+++ b/empty_min.cfg
@@ -544,8 +544,8 @@ var driversConfig = xdc.useModule('ti.drivers.Config');
  *      Use TI-RTOS drivers library for debugging with asserts and logs enabled.
  */
 driversConfig.libType = driversConfig.LibType_NonInstrumented;
-//driversConfig.libType = driversConfig.LibType_Instrumented;
-
-
-
-/* ================ Application Specific Instances ================ */
+var clock0Params = new Clock.Params();
+clock0Params.instance.name = "RLS_LED_Update";
+clock0Params.period = 100;
+clock0Params.startFlag = true;
+Program.global.RLS_LED_Update = Clock.create("&RLS_LED_Update_Task", 1000, clock0Params);
