--- a/src/makefile.libs
+++ b/src/makefile.libs
@@ -1,6 +1,6 @@
 #
 # This file was generated based on the configuration script:
-#     C:\Users\Chris\workspace_v6_2\TSGC-Reconfig-Lighting-System-Software\empty.cfg
+#     C:\Users\Chris\workspace_v6_2\TSGC-Reconfig-Lighting-System-Software\empty_min.cfg
 #
 # This makefile may be included in other makefiles that need to build
 # the libraries containing the compiled source files generated as
