USB connection and simple command parsing

--- a/Debug/makefile
+++ b/Debug/makefile
@@ -11,8 +11,10 @@ GEN_CMDS__FLAG := -l"configPkg/linker.cmd"
 
 ORDERED_OBJS += \
 "./EK_TM4C123GXL.obj" \
+"./RLS_Command.obj" \
 "./RLS_LED.obj" \
 "./RLS_Main.obj" \
+"./RLS_USB.obj" \
 "../EK_TM4C123GXL.cmd" \
 $(GEN_CMDS__FLAG) \
 -l"C:/ti/tirtos_tivac_2_16_01_14/products/TivaWare_C_Series-2.1.1.71b/grlib/ccs/Debug/grlib.lib" \
@@ -158,8 +160,8 @@ TSGC-Reconfig-Lighting-System-Software.hex: $(EXE_OUTPUTS)
 # Other Targets
 clean:
 	-$(RM) $(BIN_OUTPUTS__QUOTED)$(GEN_FILES__QUOTED)$(EXE_OUTPUTS__QUOTED)
-	-$(RM) "EK_TM4C123GXL.obj" "RLS_LED.obj" "RLS_Main.obj" 
-	-$(RM) "EK_TM4C123GXL.d" "RLS_LED.d" "RLS_Main.d" 
+	-$(RM) "EK_TM4C123GXL.obj" "RLS_Command.obj" "RLS_LED.obj" "RLS_Main.obj" "RLS_USB.obj" 
+	-$(RM) "EK_TM4C123GXL.d" "RLS_Command.d" "RLS_LED.d" "RLS_Main.d" "RLS_USB.d" 
 	-$(RMDIR) $(GEN_MISC_DIRS__QUOTED)
 	-@echo 'Finished clean'
 	-@echo ' '
