--- a/empty_min.cfg
+++ b/empty_min.cfg
@@ -447,7 +447,7 @@ Task.checkStackFlag = false;
  * The default is dependent on the device being used. Reducing the default stack
  * size yields greater memory savings.
  */
-Task.defaultStackSize = 512;
+Task.defaultStackSize = 2048;
 
 /*
  * Enables the idle task.
@@ -549,3 +549,7 @@ clock0Params.instance.name = "RLS_LED_Update";
 clock0Params.period = 100;
 clock0Params.startFlag = true;
 Program.global.RLS_LED_Update = Clock.create("&RLS_LED_Update_Task", 1000, clock0Params);
+var m3Hwi0Params = new m3Hwi.Params();
+m3Hwi0Params.instance.name = "USB_Interupt";
+m3Hwi0Params.priority = 1;
+Program.global.USB_Interupt = m3Hwi.create(60, "&USBCDCD_hwiHandler", m3Hwi0Params);
